Name: Gannet
Version: 1.0
Cabal-Version: >= 1.2
Build-Type: Simple
License: GPL
License-file: ../LICENSE
Author: Wim Vanderbauwhede
Maintainer: Wim.Vanderbauwhede@mail.be
Category: Compilers
Description: 
             This compiler is part of the Glasgow Parallel Reduction Machine (GPRM) framework for task-based parallel programming.
             GPIR is a functional intermediate represenation language for parallel task compostion in manycore systems. The compiler generates the bytecode for the GPRM runtime.
Synopsis: Compiler for the GPRM Intermediate Representation language (GPIR, aka Gannet)
copyright: Wim Vanderbauwhede

Flag MacPorts
    description: Use MacPorts toolchain rather than OS X default one
    default: False

Executable gannetc-darwin
    Build-Depends: mtl, base, containers, parsec, HsSyck >= 0.45, directory, bytestring
    if flag(MacPorts)
        GHC-Options: -O -pgml /opt/local/bin/ld -static -fwarn-unused-binds -fwarn-unused-imports -fwarn-unused-matches -fwarn-unused-do-bind
    if !flag(MacPorts)
        GHC-Options: -O -static -fwarn-unused-binds -fwarn-unused-imports -fwarn-unused-matches -fwarn-unused-do-bind
    ld-options: -static 
    Main-is: Main.hs
    Hs-Source-Dirs: .
    if !os(darwin)
        buildable: False              

Executable gannetc-linux
    Build-Depends: mtl, base, containers, parsec, HsSyck >= 0.45, directory, bytestring
    GHC-Options: -O -static -fwarn-unused-binds -fwarn-unused-imports -fwarn-unused-matches -fwarn-unused-do-bind
    ld-options: -static -pthread
    Main-is: Main.hs
    Hs-Source-Dirs: .
    if !os(linux)    
        buildable: False
    
